--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,178 @@
-                                                                                                                                                                                      
+    @import url(font-awesome.min.css);                                                                  
+                                                                                                    
+/*                                                                                                  
+        Hyperspace by HTML5 UP                                                                      
+        html5up.net | @ajlkn                                                                        
+        Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)        
+*/                                                                                                  
+                                                                                                    
+/* Reset */                                                                                         
+                                                                                                    
+        html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, $
+                margin: 0;                                                                          
+                padding: 0;                                                                         
+                border: 0;                                                                          
+                font-size: 100%;                                                                    
+                font: inherit;                                                                      
+                vertical-align: baseline;                                                           
+        }                                                                                           
+                                                                                                    
+        article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {   
+                display: block;                                                                     
+        }                                                                                           
+                                                                                                    
+        body {                                                                                      
+                line-height: 1;                                                                     
+        }                                                                                           
+                                                                                                    
+        ol, ul {                                                                                    
+                list-style: none;                                                                   
+        }                                                                                           
+                                                                                                    
+        blockquote, q {                                                                             
+                quotes: none;                                                                       
+        }
+
+         blockquote:before, blockquote:after, q:before, q:after {                                    
+                content: '';                                                                        
+                content: none;                                                                      
+        }                                                                                           
+                                                                                                    
+        table {                                                                                     
+                border-collapse: collapse;                                                          
+                border-spacing: 0;                                                                  
+        }                                                                                           
+                                                                                                    
+        body {                                                                                      
+                -webkit-text-size-adjust: none;                                                     
+        }                                                                                           
+                                                                                                    
+/* Box Model */                                                                                     
+                                                                                                    
+        *, *:before, *:after {                                                                      
+                -moz-box-sizing: border-box;                                                        
+                -webkit-box-sizing: border-box;                                                     
+                box-sizing: border-box;                                                             
+        }                                                                                           
+                                                                                                    
+/* Grid */                                                                                          
+                                                                                                    
+        .row {                                                                                      
+                border-bottom: solid 1px transparent;                                               
+                -moz-box-sizing: border-box;                                                        
+                -webkit-box-sizing: border-box;                                                     
+                box-sizing: border-box;                                                             
+        }                                                                                           
+                                                                                                    
+        .row > * {                                                                                  
+                float: left;                                                                        
+                -moz-box-sizing: border-box;                                                        
+                -webkit-box-sizing: border-box;                                                     
+                box-sizing: border-box;                                                             
+        }                                                                                           
+                                                                                                    
+        .row:after, .row:before {                                                                   
+                content: '';                                                                        
+                display: block;                                                                     
+                clear: both;                                                                        
+                height: 0;                                                                          
+        }
+
+
+      .row:after, .row:before {                                                                   
+                content: '';                                                                        
+                display: block;                                                                     
+                clear: both;                                                                        
+                height: 0;                                                                          
+        }                                                                                           
+                                                                                                    
+        .row.uniform > * > :first-child {                                                           
+                margin-top: 0;                                                                      
+        }                                                                                           
+                                                                                                    
+        .row.uniform > * > :last-child {                                                            
+                margin-bottom: 0;                                                                   
+        }                                                                                           
+                                                                                                    
+        .row.\30 \25 > * {                                                                          
+                padding: 0 0 0 0em;                                                                 
+        }                                                                                           
+                                                                                                    
+        .row.\30 \25 {                                                                              
+                margin: 0 0 -1px 0em;                                                               
+        }                                                                                           
+                                                                                                    
+        .row.uniform.\30 \25 > * {                                                                  
+                padding: 0em 0 0 0em;                                                               
+        }                                                                                           
+                                                                                                    
+        .row.uniform.\30 \25 {                                                                      
+                margin: 0em 0 -1px 0em;                                                             
+        }
+
+  .row.\30 \25 > * {                                                                          
+                padding: 0 0 0 0em;                                                                 
+        }                                                                                           
+                                                                                                    
+        .row.\30 \25 {                                                                              
+                margin: 0 0 -1px 0em;                                                               
+        }                                                                                           
+                                                                                                    
+        .row.uniform.\30 \25 > * {                                                                  
+                padding: 0em 0 0 0em;                                                               
+        }                                                                                           
+                                                                                                    
+        .row.uniform.\30 \25 {                                                                      
+                margin: 0em 0 -1px 0em;                                                             
+        }                                                                                           
+                                                                                                    
+        .row > * {                                                                                  
+                padding: 0 0 0 1.5em;                                                               
+        }                                                                                           
+                                                                                                    
+        .row {                                                                                      
+                margin: 0 0 -1px -1.5em;                                                            
+        }                                                                                           
+                                                                                                    
+        .row.uniform > * {                                                                          
+                padding: 1.5em 0 0 1.5em;                                                           
+        }                                                                                           
+                                                                                                    
+        .row.uniform {                                                                              
+                margin: -1.5em 0 -1px -1.5em;                                                       
+        }                                                                                           
+                                                                                                    
+        .row.\32 00\25 > * {                                                                        
+                padding: 0 0 0 3em;                                                                 
+        }                                                                                           
+                                                                                                    
+        .row.\32 00\25 {                                                                            
+                margin: 0 0 -1px -3em;                                                              
+        }
+
+
+
+        header h3 + p {                                                                             
+                font-size: 1.1em;                                                                   
+                margin-top: -0.8em;                                                                 
+                line-height: 1.5em;                                                                 
+        }                                                                                           
+                                                                                                    
+        header h4 + p,                                                                              
+        header h5 + p,                                                                              
+        header h6 + p {                                                                             
+                font-size: 0.9em;                                                                   
+                margin-top: -0.6em;                                                                 
+                line-height: 1.5em;                                                                 
+        }                                                                                           
+                                                                                                    
+/* Split */  
+        .split {                                                                                    
+                display: -moz-flex;                                                                 
+                display: -webkit-flex;                                                              
+                display: -ms-flex;                                                                  
+                display: flex;                                                                      
+        }
                 .split > * {                                                                                                                                                          
                         width: calc(50% - 2.5em);                                                                                                                                     
                 }                                                                                                                                                                     
